# solo-plAI

./: README.md  pyproject.toml
soloplai/llm/: oracle.py
soloplai/llm/config/: config.yaml
soloplai/space77/system/: system.py
soloplai/tables/space77_migrations/: 001_starport_rolls.sql  002_starport_classes.sql
