[tool.poetry]
name = "soloplai"
version = "0.1.0"
description = "What if we used an LLM to help play classic TTRPGs solo?"
authors = ["David Lachut <dslachut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
