[tool.poetry]
name = "soloplai"
version = "0.1.0"
description = "What if we used an LLM to help play classic TTRPGs solo?"
authors = ["David Lachut <dslachut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.40.3"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
pylint = "^3.2.6"
ipykernel = "^6.29.5"
pytest = "^8.3.2"
coverage = "^7.6.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    missing-module-docstring
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
